--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <input type="checkbox" id="dropdown">
             <label for="dropdown"><span></span></label>
             <ul>
-                <li id="home"><a href="#home">MuzakMaker</a></li>
+                <li><a href="#home">MuzakMaker</a></li>
                 <li><a href="#trending">Trending<br>Songs</a></li>
-                <li><a href="#playlist">Your<br>Playlist</a></li>
+                <li><a href="#playlists">Your<br>Playlist</a></li>
                 <li><a href="#curated">Curated<br>Playlists</a></li>
                 <li><a href="#user"><img src="images/duke-silver.png" alt="user profile picture"></a></li>
             </ul>
@@ -180,6 +180,9 @@
         <footer>
             <small>Copyright 2022 Smooth Jazz</small>
         </footer>
+
+
+        
 
     </body>
 </html>
