updated media query

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         </section>
                     </div>
                 </section>
-                <button>All your playlists</button>
+                <button id="btnPlaylists">All your playlists</button>
             </aside>
 
             <aside>
@@ -174,7 +174,7 @@
                         </section>
                     </div>
                 </section>
-                <button>More curated</button>
+                <button id="btnCurated">More curated</button>
         </aside>
 
         <footer>
