last update before finishing

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
                 <button id="btnTrending">More Trending</button>
             </section>
-        <section class="allPlaylists">
+        <div class="allPlaylists">
             <section id="playlists">
                 <h2>Your Playlists</h2>
                 <div class="scroll">
@@ -170,7 +170,7 @@
                 </div>
                 <button id="btnCurated">More curated</button>
             </section>
-        </section>
+        </div>
         </main>
         <footer>
             <small>Copyright 2022 Smooth Jazz</small>
